# StockBrief

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  pyproject.toml
docs/: USAGE.md
examples/: github-actions-daily.yml  keyless_demo.py  kis_account.py  telegram_bot.py
skills/portfolio-advisor/: SKILL.md
skills/retrospect/: SKILL.md
src/stockbrief/: __init__.py  _util.py  benchmark.py  briefing.py  config.py  indicators.py  lib.py  llm.py  metrics.py  models.py  pipeline.py  reconcile.py  retrospect.py  state.py
src/stockbrief/integrations/: __init__.py  kis.py
src/stockbrief/providers/: __init__.py  base.py  flow_kis.py  fx_free.py  holdings_dict.py  holdings_json.py  news_google.py  news_naver.py  quotes_composite.py  quotes_kis.py  quotes_pykrx.py  quotes_yf.py  sentiment_cnn.py
tests/: test_compute.py  test_lib.py  test_providers.py  test_state.py
